# test-actions

./: Dockerfile  README.md  heroku.yml  package-lock.json  package.json
.agents/: architecture.md  coding_rules.md  implementation_plan.md  master_plan.md  protocol.md  requirements.md  technology_stack.md
.ci/android/: build_app.sh  deploy_google_play.sh  setup_environment.sh
.github/workflows/: android.yml  ios-build.yml
src/: App.css  App.js  Calculator.css  Calculator.js  WebSearch.css  WebSearch.js
src-rhodes/: build.yml  rhoconfig.txt
src-rhodes/app/: index.erb  layout.erb
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sign.patch/: build.gradle.kts
src/react-stub/: package-lock.json  package.json
src/react-stub/src-tauri/: tauri.conf.json
